--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "firebase": "^10.4.0",
     "firebaseui": "^6.1.0",
     "pinia": "^2.1.6",
+    "sass": "^1.69.3",
+    "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
