--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "firebaseui": "^6.1.0",
     "pinia": "^2.1.6",
