--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "firebaseui": "^6.1.0",
+    "jose": "^4.15.4",
     "pinia": "^2.1.6",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
