--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebaseui": "^6.1.0",
     "jose": "^4.15.4",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
