--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "dev": "vite --host",
+    "format": "prettier --write src/",
+    "preview": "vite preview "
   },
   "dependencies": {
     "axios": "^1.5.1",
@@ -19,6 +19,7 @@
     "jose": "^4.15.4",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "register-service-worker": "^1.7.2",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.3.4",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.49.0",
@@ -34,6 +36,7 @@
     "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
     "vite": "^4.4.9",
+    "vite-plugin-pwa": "^0.20.0",
     "vitest": "^0.34.4"
   }
 }
