--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "firebase": "^10.4.0",
     "firebaseui": "^6.1.0",
     "jose": "^4.15.4",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.1",
     "register-service-worker": "^1.7.2",
