--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "chartist": "^1.3.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "firebaseui": "^6.1.0",
